[metadata]
name = errexp
version = 0.1
author = Nadav Amit
description = Linux syscall kernel error analyzer
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = kernel, syscall, error
license = BSD 2-Clause License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8, <4
install_requires =
    angr==9.2.25
    ansicolors==1.1.8
    bcc==0.1.10
    capstone==4.0.2
    claripy==9.2.25
    cle==9.2.25
    numpy==1.23.5
    lz4==4.3.2
    ptrace==1.0.1
    pyelftools==0.29
    psutil==5.9.4
    pyseccomp==0.1.2
    pytest==7.2.2
    python_ptrace==0.9.8
    tqdm==4.64.1

[options.package_data]
* = *.txt, *.rst, tests/run_tests.sh, tests/Makefile, tests/src/*

[options.entry_points]
console_scripts =
    deeperr = my_package.deeperr:main

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    my_package.tests*
